tests/samples/negative/functions/associated_receiver_required.ax
module associated_receiver_required;

struct Counter {
    value: i32;
}

impl Counter {
    fn add(self: *mut Counter, delta: i32) -> i32 {
        self.value = self.value + delta;
        return self.value;
    }
}

fn main() -> i32 {
    return Counter.add(1);
}
